--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,14 +1,28 @@
-.Header
-  .Contents
-    .Contents__name
-      mercari
-    .Contents__search
-      何かお探しですか？
-    .Contents__category
-      カテゴリーから探す
-    .Contents__search-brand
-      ブランドから探す
-    .Contents__sign-up
-      新規登録
-    .Contents__sign-in
-      ログイン
+.Wrapper
+  .Top
+    .Header
+      .Header__top
+        .top__name
+          mercari
+        .top__search
+          何かお探しですか？
+      .Header__bottom
+        .Header__bottom__left
+          .left__category
+            カテゴリーから探す
+          .left__search-brand
+            ブランドから探す
+        .bottom__right
+          .right__sign-up
+            新規登録
+          .right__sign-in
+            ログイン
+    .Advertising
+      キャンプ用品
+    .Advertising-nav
+      .Advertising-nav__next
+        next
+      .Advertising-prev__prev
+        prev
+    .Advertising-dots
+      ● ●
