--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -9,25 +9,28 @@
             何かお探しですか？
             =fa_icon "search", class: 'icon'
 
-      .Header__bottom
-        .bottom__left
+      .Header__mid
+        .mid__left
           .left__category
             =fa_icon "list-ul", class: 'icon'
             カテゴリーから探す
           .left__search-brand
             =fa_icon "tag", class: 'icon'
             ブランドから探す
-        .bottom__right
+        .mid__right
           .right__sign-up
             新規会員登録
           .right__sign-in
             ログイン
-    .Advertising
-      .Advertisings
-        .Advertisings__nav
-          .nav__next
-            =fa_icon "chevron-right", class: 'icon'
-          .nav__prev
-            =fa_icon "chevron-left", class: 'icon'
-          .nav__dots
-            ● ●
+      .Header__bottom
+        .bottom__Advertisings
+          .Advertisings__nav
+            .nav__next
+              =fa_icon "chevron-right", class: 'icon'
+            .nav__prev
+              =fa_icon "chevron-left", class: 'icon'
+            .nav__dots
+              ● ●
+  -# .Main
+    -# %h2
+    -#   ピックアップカテゴリー
