--- a/app/assets/stylesheets/_items.scss
+++ b/app/assets/stylesheets/_items.scss
@@ -5,17 +5,19 @@
   padding: 0%;
   display: block;
   position: fixed;
+  overflow: auto;
 
-  .Top {
-    width: 100%;
-    height: 100px;
-    background-color: #fff;
+  #Top {
     position: relative;
+    background-color: #fff;
+    // width: 100%;
+    // height: 400px;
     // z-index: 1001;
     // display: none;
 
     .Header {
       box-sizing: border-box;
+      // background-color: #fff;
 
       &__top {
         width: 700px;
@@ -209,10 +211,305 @@
       }
     }    
   }
-  // .Main {
-  //   background-color: #f5f5f5;
-  //   padding: 20px 0 0 0;
-  //   height: auto;
-  //   width: 100%;
-  // }
+  #Main {
+    padding: 20px 0 0 0;
+    height: auto;
+    width: 100%;
+    padding: 40px 0;
+    background-color: #F5f5f5;
+
+    .Pickup-header {
+      font-size: 28px;
+      text-align: center;
+      font-weight: bold;
+    }
+    
+    .Items{
+      width: 700px;
+      margin: 0 auto;
+      display: block;
+      .Items__text {
+        margin: 26px 11px;
+        color: #0099E8;
+        font-size: 22px;
+        text-align: center;
+        font-weight: bold;
+      }
+      .Items__content {
+        height: 330px;
+        position: relative;
+        display: flex;
+
+        .content__box1 {
+          width: 213px;
+          margin: 0 0 0 20px;
+          position: relative;
+          background-color: red;
+          
+          .photo {
+            overflow: hidden;
+            position: relative;
+            height: 220px;
+          }
+
+          .data {
+            padding: 16px;
+            background-color: #fff;
+            height: 110px;
+            box-sizing: border-box;
+
+            .name {
+              font-size: 16px;
+              overflow: hidden;
+              font-weight: 400;
+              height: 48px;
+              color: #333;
+              // position: relative;
+              // line-height: 1.5;
+              // word-break: break-word;
+              // white-space: normal;
+              // background-color: black;
+            }
+
+            .num {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              margin: 8px 0 0;
+            }
+
+              .price {
+                font-size: 16px;
+                font-weight: 600;
+              }
+
+              .like {
+                font-size: 16px;
+                font-weight: 400;
+                color: #333;
+
+                // display: inline-block;
+                // font-family: 'icon-font';
+                // speak: none;
+                // font-style: normal;
+                // font-weight: 400;
+                // font-variant: normal;
+                // text-transform: none;
+                // line-height: 1;
+              }
+            }
+          }
+
+        .content__box2 {
+          width: 213px;
+          margin: 0 0 0 20px;
+          position: relative;
+          background-color: #0099E8;
+
+          .photo {
+            overflow: hidden;
+            position: relative;
+            height: 220px;
+          }
+
+          .data {
+            padding: 16px;
+            background-color: #fff;
+            height: 110px;
+            box-sizing: border-box;
+
+            .name {
+              font-size: 16px;
+              overflow: hidden;
+              font-weight: 400;
+              height: 48px;
+              color: #333;
+              // position: relative;
+              // line-height: 1.5;
+              // word-break: break-word;
+              // white-space: normal;
+              // background-color: black;
+            }
+
+            .num {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              margin: 8px 0 0;
+            }
+
+              .price {
+                font-size: 16px;
+                font-weight: 600;
+              }
+
+              .like {
+                font-size: 16px;
+                font-weight: 400;
+                color: #333;
+
+                // display: inline-block;
+                // font-family: 'icon-font';
+                // speak: none;
+                // font-style: normal;
+                // font-weight: 400;
+                // font-variant: normal;
+                // text-transform: none;
+                // line-height: 1;
+              }
+            }
+          }
+
+        .content__box3 {
+          width: 213px;
+          margin: 0 0 0 20px;
+          position: relative;
+          background-color: yellow;
+
+          .photo {
+            overflow: hidden;
+            position: relative;
+            height: 220px;
+            width: 100%;
+          }
+
+          .data {
+            padding: 16px;
+            background-color: #fff;
+            height: 110px;
+            box-sizing: border-box;
+            
+            .name {
+              font-size: 16px;
+              overflow: hidden;
+              font-weight: 400;
+              height: 48px;
+              color: #333;
+              // position: relative;
+              // line-height: 1.5;
+              // word-break: break-word;
+              // white-space: normal;
+              // background-color: black;
+            }
+
+            .num {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              margin: 8px 0 0;
+            }
+
+              .price {
+                font-size: 16px;
+                font-weight: 600;
+              }
+
+              .like {
+                font-size: 16px;
+                font-weight: 400;
+                color: #333;
+
+                // display: inline-block;
+                // font-family: 'icon-font';
+                // speak: none;
+                // font-style: normal;
+                // font-weight: 400;
+                // font-variant: normal;
+                // text-transform: none;
+                // line-height: 1;
+              }
+            }
+          }
+        }
+
+      .Items__more {
+        display: block;
+        padding: 20px 0 30px;
+        text-align: right;
+        width: 99.5%;
+        font-size: 14px;
+        color: #0099E8;
+      }
+    }
+  }
+  
+  #App {
+    // position: relative;
+    background-color: #808080;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 260px;
+
+    .Apps {
+      position: relative;
+      width: 750px;
+      height: 260px;
+      margin: 0 auto;
+      color: #fff;
+      // display: none;
+      // overflow: hidden;
+
+      .Apps__content {
+        position: absolute;
+        top: 50%;
+        left: 16px;
+        transform: translate(0, -50%);
+
+        .app-banner-icon {
+          // position: relative;
+          margin: 20px 0 0;
+          height: 68px;
+          width: 374px;
+          background-color: #fff;
+
+          .app-icon {
+            float: left;
+            height: 68px;
+            width: 68px;
+            background-color: #f0f;
+          }
+          
+          .app-download {
+            // position: absolute;
+            // top: 14px;
+            
+            float: right;
+            display: flex;
+            margin: 14px 0 0 24px;
+            // line-height: 68px;
+
+
+            .apple {
+              display: block;
+              height: 40px;
+              width: 133px;
+              line-height: 68px;
+              background-color: #99ffff;
+              // display: block;
+              // display: flex;
+            }
+
+            .google {
+              margin: 0 0 0 16px;
+              display: block;
+              height: 40px;
+              width: 133px;
+              background-color: #99ffcc;
+            }
+          }
+        }
+      }
+
+      .Apps__picture {
+        background-color: #ccccffff;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 300px;
+        height: 100%;
+      }
+    }
+  }
 }
