IDがAppを追加,Mainの作成
それぞれの大枠の命名をID表記に変更

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,5 +1,5 @@
 .Wrapper
-  .Top
+  #Top
     .Header
       .Header__top
         .top__name
@@ -31,6 +31,53 @@
               =fa_icon "chevron-left", class: 'icon'
             .nav__dots
               ● ●
-  -# .Main
-    -# %h2
-    -#   ピックアップカテゴリー
+  #Main
+    .Pickup-header
+      ピックアップカテゴリー
+    .Items
+      .Items__text
+        レディース新着アイテム
+      .Items__content
+        .content__box1
+          .photo
+          .data
+            .name
+              新品未使用
+            .num
+              .price
+                ¥ 1,980
+              .like
+                ♡
+        .content__box2
+          .photo
+          .data
+            .name
+              使用済み
+            .num
+              .price
+                ¥ 1,000
+              .like
+                ♡
+        .content__box3
+          .photo
+          .data
+            .name
+              超新品
+            .num
+              .price
+                ¥ 3,980
+              .like
+                ♡
+      .Items__more
+        全ての商品を見る
+  #App
+    .Apps
+      .Apps__content
+        %h2 スマホでかんたんフリマアプリ
+        %p 今すぐ無料ダウンロード！
+        .app-banner-icon
+          .app-icon
+          .app-download
+            .apple
+            .google
+      .Apps__picture
