liタグの詳細を変更

--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -74,8 +74,14 @@ var {
 ol,
 ul {
   list-style:none;
+  display: block;
 }
-
+li {
+  display: block;
+  margin: 16px 0 0;
+  font-size: 12px;
+  opacity: .7;
+}
 caption,
 th {
   text-align:left;
