--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -81,3 +81,55 @@
             .apple
             .google
       .Apps__picture
+  #Footer
+    .Information
+      .Information__about
+        .about-footer メルカリについて
+        %ul
+          %li 会社概要（運営会社）
+          %li 採用情報
+          %li ブレスリリース
+          %li 公式ブログ
+          %li メルカリロゴ利用ガイドライン
+          .link-twitter
+            =fa_icon "twitter 2x", class: 'icon'
+          .link-facebook
+            =fa_icon "facebook-square 2x", class: 'icon'
+      .Information__guide
+        .guide-footer ヘルプ＆ガイド
+        %ul
+          %li メルカリガイド
+          %li らくらくメルカリ便
+          %li ゆうゆうメルカリ便
+          %li 大型メルカリ便
+          %li 車体取引ガイド
+          %li メルカリあんしん・あんぜん宣言！
+          %li 偽ブランド品撲滅への取り組み
+          %li メルカリボックス
+      .Information__privacy
+        .privacy-footer プライバシーと利用規約
+        .inner-left
+          %ul
+            %li プライバシーポリシー
+            %li メルカリ利用規約
+            %li あんしんスマホサポート制度に関する利用規約
+            %li コンプライアンスポリシー
+        .inner-right
+          %ul
+            %li 個人データの安全管理に係る基本方針
+            %li 特定商取引に関する表記
+            %li 資金決済法に基づく表記
+            %li 法令順守と犯罪抑止のために
+      .Information__nav
+        .nav-country 国
+        %ul
+          %li 日本
+          %li United States
+    .Information-bottom
+      .logo チームC
+      .copyright 
+        =fa_icon "copyright", class: 'icon' 
+        2019 Mercari
+    .Exhibit-btn
+      .exhibit 出品
+      =fa_icon "camera", class: 'icon'
