--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,135 +1,5 @@
 .Wrapper
-  #Top
-    .Header
-      .Header__top
-        .top__name
-          チームC
-        .top__search
-          .search__word
-            何かお探しですか？
-            =fa_icon "search", class: 'icon'
-
-      .Header__mid
-        .mid__left
-          .left__category
-            =fa_icon "list-ul", class: 'icon'
-            カテゴリーから探す
-          .left__search-brand
-            =fa_icon "tag", class: 'icon'
-            ブランドから探す
-        .mid__right
-          .right__sign-up
-            新規会員登録
-          .right__sign-in
-            ログイン
-      .Header__bottom
-        .bottom__Advertisings
-          .Advertisings__nav
-            .nav__next
-              =fa_icon "chevron-right", class: 'icon'
-            .nav__prev
-              =fa_icon "chevron-left", class: 'icon'
-            .nav__dots
-              ● ●
-  #Main
-    .Pickup-header
-      ピックアップカテゴリー
-    .Items
-      .Items__text
-        レディース新着アイテム
-      .Items__content
-        .content__box1
-          .photo
-          .data
-            .name
-              新品未使用
-            .num
-              .price
-                ¥ 1,980
-              .like
-                ♡
-        .content__box2
-          .photo
-          .data
-            .name
-              使用済み
-            .num
-              .price
-                ¥ 1,000
-              .like
-                ♡
-        .content__box3
-          .photo
-          .data
-            .name
-              超新品
-            .num
-              .price
-                ¥ 3,980
-              .like
-                ♡
-      .Items__more
-        全ての商品を見る
-  #App
-    .Apps
-      .Apps__content
-        %h2 スマホでかんたんフリマアプリ
-        %p 今すぐ無料ダウンロード！
-        .app-banner-icon
-          .app-icon
-          .app-download
-            .apple
-            .google
-      .Apps__picture
-  #Footer
-    .Information
-      .Information__about
-        .about-footer メルカリについて
-        %ul
-          %li 会社概要（運営会社）
-          %li 採用情報
-          %li ブレスリリース
-          %li 公式ブログ
-          %li メルカリロゴ利用ガイドライン
-          .link-twitter
-            =fa_icon "twitter 2x", class: 'icon'
-          .link-facebook
-            =fa_icon "facebook-square 2x", class: 'icon'
-      .Information__guide
-        .guide-footer ヘルプ＆ガイド
-        %ul
-          %li メルカリガイド
-          %li らくらくメルカリ便
-          %li ゆうゆうメルカリ便
-          %li 大型メルカリ便
-          %li 車体取引ガイド
-          %li メルカリあんしん・あんぜん宣言！
-          %li 偽ブランド品撲滅への取り組み
-          %li メルカリボックス
-      .Information__privacy
-        .privacy-footer プライバシーと利用規約
-        .inner-left
-          %ul
-            %li プライバシーポリシー
-            %li メルカリ利用規約
-            %li あんしんスマホサポート制度に関する利用規約
-            %li コンプライアンスポリシー
-        .inner-right
-          %ul
-            %li 個人データの安全管理に係る基本方針
-            %li 特定商取引に関する表記
-            %li 資金決済法に基づく表記
-            %li 法令順守と犯罪抑止のために
-      .Information__nav
-        .nav-country 国
-        %ul
-          %li 日本
-          %li United States
-    .Information-bottom
-      .logo チームC
-      .copyright 
-        =fa_icon "copyright", class: 'icon' 
-        2019 Mercari
-    .Exhibit-btn
-      .exhibit 出品
-      =fa_icon "camera", class: 'icon'
+  = render 'top'
+  = render 'main'
+  = render 'app'
+  = render 'footer'
