Changed of name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,8 @@
  */
 @import "reset";
 @import "font-awesome";
-@import "items/wrappers";
-@import "items/tops";
-@import "items/mains";
-@import "items/apps";
-@import "items/footers";
+@import "items/wrapper";
+@import "items/top";
+@import "items/main";
+@import "items/app";
+@import "items/footer";
