--- a/app/assets/stylesheets/items/_main.scss
+++ b/app/assets/stylesheets/items/_main.scss
@@ -1,9 +1,12 @@
+@import "config/_colors.scss";
+@import "config/_settings.scss";
+
 #Main {
   padding: 20px 0 0 0;
   height: auto;
   width: 100%;
   padding: 40px 0;
-  background-color: #F5f5f5;
+  background-color: $light_white;
 
   .Pickup-header {
     font-size: 28px;
@@ -28,189 +31,20 @@
       display: flex;
 
       .content__box1 {
-        width: 213px;
-        margin: 0 0 0 20px;
-        position: relative;
-        background-color: red;
-        cursor: pointer;
-        
-        .photo {
-          overflow: hidden;
-          position: relative;
-          height: 220px;
-        }
-
-        .data {
-          padding: 16px;
-          background-color: #fff;
-          height: 110px;
-          box-sizing: border-box;
-
-          .name {
-            font-size: 16px;
-            overflow: hidden;
-            font-weight: 400;
-            height: 48px;
-            color: #333;
-            // position: relative;
-            // line-height: 1.5;
-            // word-break: break-word;
-            // white-space: normal;
-            // background-color: black;
-          }
-
-          .num {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin: 8px 0 0;
-          }
-
-            .price {
-              font-size: 16px;
-              font-weight: 600;
-            }
-
-            .like {
-              font-size: 16px;
-              font-weight: 400;
-              color: #333;
-
-              // display: inline-block;
-              // font-family: 'icon-font';
-              // speak: none;
-              // font-style: normal;
-              // font-weight: 400;
-              // font-variant: normal;
-              // text-transform: none;
-              // line-height: 1;
-            }
-          }
-        }
+        background-color: $red;
+        @include content_box;
+      }
 
       .content__box2 {
-        width: 213px;
-        margin: 0 0 0 20px;
-        position: relative;
         background-color: #0099E8;
-        cursor: pointer;
-
-        .photo {
-          overflow: hidden;
-          position: relative;
-          height: 220px;
-        }
-
-        .data {
-          padding: 16px;
-          background-color: #fff;
-          height: 110px;
-          box-sizing: border-box;
-
-          .name {
-            font-size: 16px;
-            overflow: hidden;
-            font-weight: 400;
-            height: 48px;
-            color: #333;
-            // position: relative;
-            // line-height: 1.5;
-            // word-break: break-word;
-            // white-space: normal;
-            // background-color: black;
-          }
-
-          .num {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin: 8px 0 0;
-          }
-
-            .price {
-              font-size: 16px;
-              font-weight: 600;
-            }
-
-            .like {
-              font-size: 16px;
-              font-weight: 400;
-              color: #333;
-
-              // display: inline-block;
-              // font-family: 'icon-font';
-              // speak: none;
-              // font-style: normal;
-              // font-weight: 400;
-              // font-variant: normal;
-              // text-transform: none;
-              // line-height: 1;
-            }
-          }
+        @include content_box;
         }
 
       .content__box3 {
-        width: 213px;
-        margin: 0 0 0 20px;
-        position: relative;
         background-color: yellow;
-        cursor: pointer;
-
-        .photo {
-          overflow: hidden;
-          position: relative;
-          height: 220px;
-          width: 100%;
-        }
-
-        .data {
-          padding: 16px;
-          background-color: #fff;
-          height: 110px;
-          box-sizing: border-box;
-          
-          .name {
-            font-size: 16px;
-            overflow: hidden;
-            font-weight: 400;
-            height: 48px;
-            color: #333;
-            // position: relative;
-            // line-height: 1.5;
-            // word-break: break-word;
-            // white-space: normal;
-            // background-color: black;
-          }
-
-          .num {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin: 8px 0 0;
-          }
-
-            .price {
-              font-size: 16px;
-              font-weight: 600;
-            }
-
-            .like {
-              font-size: 16px;
-              font-weight: 400;
-              color: #333;
-
-              // display: inline-block;
-              // font-family: 'icon-font';
-              // speak: none;
-              // font-style: normal;
-              // font-weight: 400;
-              // font-variant: normal;
-              // text-transform: none;
-              // line-height: 1;
-            }
-          }
-        }
+        @include content_box;
       }
+    }
 
     .Items__more {
       display: block;
