--- a/app/views/items/_main.html.haml
+++ b/app/views/items/_main.html.haml
@@ -7,32 +7,35 @@
     .Items__content
       .content__box1
         .photo
+          = image_tag "https://static.mercdn.net/thumb/photos/m84062837012_1.jpg?1565133102", size: "213x220"
         .data
           .name
-            新品未使用
+            KASHIKEY カシケイ K18BGネイキッドブローチ
           .num
             .price
-              ¥ 1,980
+              ¥ 84,500
             .like
               ♡
       .content__box2
         .photo
+          = image_tag "https://static.mercdn.net/thumb/photos/m83100926579_1.jpg?1565006595", size: "213x220"
         .data
           .name
-            使用済み
+            LATINA 新品 レースVネッックリブキャミワンピース
           .num
             .price
-              ¥ 1,000
+              ¥ 2,800
             .like
               ♡
       .content__box3
         .photo
+          = image_tag "https://static.mercdn.net/thumb/photos/m39551534290_1.jpg?1565495262", size: "213x220"
         .data
           .name
-            超新品
+            ズンバ パンツ
           .num
             .price
-              ¥ 3,980
+              ¥ 3,900
             .like
               ♡
     .Items__more
