--- a/app/views/items/_app.html.haml
+++ b/app/views/items/_app.html.haml
@@ -5,7 +5,11 @@
       %p 今すぐ無料ダウンロード！
       .app-banner-icon
         .app-icon
+          = image_tag "https://www-mercari-jp.akamaized.net/assets/img/common/common/mercari_icon.png?2508029365", size: "68x68"
         .app-download
           .apple
+            = image_tag "https://www-mercari-jp.akamaized.net/assets/img/common/common/app-store.svg?2508029365"
           .google
-    .Apps__picture
+            = image_tag "https://www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?2508029365"
+    .Apps__pictures
+      = image_tag "https://www-mercari-jp.akamaized.net/assets/img/common/jp/download_content_pc.png?2508029365", size: "300x260"
