--- a/app/views/items/_top.html.haml
+++ b/app/views/items/_top.html.haml
@@ -1,8 +1,8 @@
 #Top
   .Header
     .Header__top
-      .top__name
-        チームC
+      .top__name  
+        = image_tag 'https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2508029365', size: "134x36"
       .top__search
         .search__word
           何かお探しですか？
@@ -24,6 +24,7 @@
     .Header__bottom
       .bottom__Advertisings
         .Advertisings__nav
+          = image_tag 'https://www-mercari-jp.akamaized.net/assets/img/featured/camp/index/index_keyvisual.png?2508029365', size: "840x290"
           .nav__next
             =fa_icon "chevron-right", class: 'icon'
           .nav__prev
