--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import "./reset";
 @import "font-awesome";
 @import "config/colors";
+@import "config/settings";
 @import "items/wrapper";
 @import "items/top";
 @import "items/main";
